--- a/css/butterflyMonarch.css
+++ b/css/butterflyMonarch.css
@@ -28,8 +28,10 @@
             [class*='grid-'] {
                 float: left;
                 width: 100%;
-                padding: 3%;
-                display: block;
+                padding: 1%;
+                margin-bottom:20px;
+                border: .5px solid #000000;
+                background-color: #db6525;
             }
 
             /* 100 */
@@ -82,8 +84,15 @@
 
             body {
                 font-family: Arial, Helvetica, sans-serif;
+                color: #000000;
+                font-family: 'Qwigley', cursive;
+            }
+
+            h1, h2, h3, h4, h5, h5 {
+                font-weight: 100;
             }
 
             .header {
                  font-family: 'Qwigley', cursive;
             }
+
